# jDuel

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  RunningSetup.md  compound-engineering.local.md  deploy.sh
backend/: .env.example  config.py  database.py  import_questions.py  main.py  models.py  pyproject.toml  questions.py  room_manager.py
backend/app/: config.py  main.py
backend/app/api/: websocket.py
backend/app/db/: database.py
backend/app/services/: room_manager.py
backend/scripts/: import_questions.py
backend/src/app/: __init__.py  config.py  main.py
backend/src/app/api/: __init__.py  dependencies.py  game_orchestrator.py  routes.py  websocket.py  websocket_handler.py
backend/src/app/config/: __init__.py  environment.py  game.py  logging.py
backend/src/app/db/: __init__.py  database.py
backend/src/app/middleware/: __init__.py  rate_limiter.py
backend/src/app/models/: __init__.py  game.py  question.py  room_config.py  round_state.py  state.py  websocket_messages.py
backend/src/app/services/: __init__.py  answer_service.py  container.py  game_service.py  orchestrator.py  room_manager.py  state_builder.py  timer_service.py
backend/src/app/services/answer/: __init__.py  answer_service.py  loader.py
backend/src/app/services/core/: __init__.py  connection_manager.py  game_service.py  question_provider.py  room_closer.py  room_manager.py  room_repository.py  timer_service.py
backend/src/app/services/orchestration/: __init__.py  orchestrator.py  protocols.py  state_builder.py
backend/src/scripts/: answer_service_testing.py  import_questions.py
backend/tests/: __init__.py  conftest.py  test_game_service.py  test_room_manager.py
backend/tests/integration/: __init__.py  conftest.py  test_rest_routes.py  test_websocket.py
backend/tests/unit/: __init__.py  conftest.py  test_connection_manager.py  test_game_service.py  test_orchestrator.py  test_room_manager.py  test_room_repository.py  test_state_builder.py  test_timer_service.py
deploy/: README.md  jduel-backend.service  setup.sh
docs/: Deployment.md  DeploymentGuide.md  Development.md  EventProtocol.md  FrontendFlow.md  GettingStarted.md  HTTPS.md  Nginx.md  NginxDeployment.md  RunningSetup.md  SystemD.md  ramUsage.txt
frontend/: .prettierignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json
todos/: 001-pending-p1-event-loop-blocking-nlp-sqlite.md  002-pending-p1-no-asyncio-lock-room-state.md  003-pending-p1-unguarded-json-parse-websocket.md  004-pending-p1-unbounded-websocket-message-size.md  005-pending-p1-rate-limiter-ip-spoofing.md  006-pending-p1-no-global-room-player-cap.md  007-pending-p1-rate-limiter-cleanup-never-called.md  008-pending-p1-non-cryptographic-room-codes.md  009-pending-p2-broadcast-dict-mutation-during-iteration.md  010-pending-p2-session-token-not-validated-at-websocket.md  011-pending-p2-nginx-missing-security-headers.md  012-pending-p2-cors-all-methods-headers.md  013-pending-p2-answers-logged-at-info-level.md  014-pending-p2-no-pre-registration-ttl.md  015-pending-p2-window-location-replace-bypasses-router.md  020-pending-p2-toctou-player-registration-race.md  (+9 more)
(+135 files in other folders)
