[project]
name = "app"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "pandas>=2.3.3",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]

# Enable common rule sets
[tool.ruff]
lint.select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # import sorting
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "C4",   # comprehensions
    "ARG",  # unused arguments
    "DTZ",  # datetime timezone mistakes
    "RUF",  # Ruff-specific rules
]

# Ignore noisy or controversial rules
lint.ignore = [
    "E501",   # line length handled by formatter
    "B008",   # allow FastAPI Depends() in params
    "ARG002", # unused method arguments (self, cls)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
